--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ h4{
     text-align: center;
     margin-bottom: 3px;
     font-size: 15px;
+    padding-top:6px;
 }
 .image{
     text-align: center;
@@ -179,6 +180,7 @@ main {
     padding: 15px;
     background-color: #f4f4f4;
     text-align: center;
+    padding-bottom:10px;
 }
 
 /* Footer styling */
